--- a/ansible/provision.yml
+++ b/ansible/provision.yml
@@ -8,27 +8,36 @@
 
   tasks:
     - name: Install system packages
-      apt: pkg={{ item }} update-cache=yes
+      apt: 
+        pkg: "{{ item }}"
+        update-cache: yes
       with_items: "{{ system_packages }}"
 
     - name: Save ssh key to server
-      copy: src={{ ssh_private_key }} dest=/root/.ssh/id_rsa mode=600
+      copy: 
+        src: "{{ ssh_private_key }}"
+        dest: "/root/.ssh/id_rsa"
+        mode: 600
 
     - name: Create directory for app
       file: path={{ install_root }}/{{ project_name }} state=directory
 
-    - name: make sure postgresql server is running
+    - name: Make sure postgresql server is running
       service: name=postgresql state=started
 
-    - name: create database
-      become_user: postgres
+    - name: Create database
       postgresql_db: name={{ db_name }}
-
-    - name: create database user
       become_user: postgres
-      postgresql_user: db={{ db_name }} name={{ db_user }} password={{ db_password }} priv=ALL
 
-    - name: remove default nginx site
+    - name: Create database user
+      postgresql_user: 
+        db: "{{ db_name }}"
+        name: "{{ db_user }}"
+        password: "{{ db_password }}"
+        priv: ALL
+      become_user: postgres
+
+    - name: Remove default nginx site
       file: path=/etc/nginx/sites-enabled/default state=absent
 
 - include: deploy.yml
