--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,23 +2,9 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "ubuntu/trusty64"
   
-  if (/cygwin|mswin|mingw|bccwin|wince|emx/ =~ RUBY_PLATFORM) != nil
-    config.vm.synced_folder ".", "/vagrant", mount_options: ["dmode=700,fmode=600"]
-  else
-    config.vm.synced_folder ".", "/vagrant"
-  end
-  config.vm.provider "virtualbox" do |v|
-    v.memory = 2048
-  end
-  config.vm.define :dev do |dev|
-    dev.vm.network "private_network", ip: "10.100.199.1"
-    #dev.vm.provision :shell, path: "bootstrap.sh"
-    #dev.vm.provision :shell,
-    #  inline: 'PYTHONUNBUFFERED=1 ansible-playbook \
-    #    /vagrant/ansible/dev.yml -c local'
-  end
+  config.vm.box = "ubuntu/trusty64"
+
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
   end
@@ -27,9 +13,25 @@ Vagrant.configure(2) do |config|
     config.vbguest.no_install = true
     config.vbguest.no_remote = true
   end
+  
+  # Development virtual machine
+  config.vm.define :dev do |dev|
+    dev.vm.network "private_network", ip: "10.100.199.10"
+    dev.vm.provision :shell, path: "bootstrap.sh"
+    dev.vm.provider :virtualbox do |vb|
+      vb.memory = 2048
+    end
+    if (/cygwin|mswin|mingw|bccwin|wince|emx/ =~ RUBY_PLATFORM) != nil
+      dev.vm.synced_folder ".", "/vagrant", mount_options: ["dmode=700,fmode=600"]
+      dev.vm.synced_folder "../ansible", "/ansible", mount_options: ["dmode=700,fmode=600"]
+    else
+      dev.vm.synced_folder ".", "/vagrant"
+      dev.vm.synced_folder "../ansible", "/ansible"
+    end
+  end
 
-  N = 3
-  (1..N).each do |machine_id|
+  # 3 production-like virtual machines
+  (1..3).each do |machine_id|
     config.vm.define "server-#{machine_id}" do |c|
       c.vm.hostname = "server-#{machine_id}"
       c.vm.network "private_network", ip: "10.100.199.#{200+machine_id}"
