--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -6,6 +6,11 @@
   become: yes
 
   tasks:
+    - name: Create directory for app
+      file: >
+        path={{ install_root }}/{{ project_name }}
+        state=directory
+
     - name: Clone project repository
       git: 
         repo: "{{ project_repo }}"
@@ -15,7 +20,8 @@
         - Restart gunicorn
 
     - name: Install Python project package requirements
-      pip: requirements={{ install_root }}/{{ project_name }}/requirements.txt
+      pip: >
+        requirements={{ install_root }}/{{ project_name }}/requirements.txt
       notify:
         - Restart gunicorn
 
