--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -18,6 +18,8 @@ Vagrant.configure(2) do |config|
   config.vm.define :dev do |dev|
     dev.vm.network "private_network", ip: "10.100.199.10"
     dev.vm.provision :shell, path: "bootstrap.sh"
+    dev.vm.provision :shell, path: "provision-servers.sh",
+      privileged: false
     dev.vm.provider :virtualbox do |vb|
       vb.memory = 2048
     end
